gateways/realtimeUse/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    name: s3-provider
  name: s3-provider
  namespace: develop
spec:
  selector:
    matchLabels:
      name: s3-provider  
  template:
    metadata:
      labels:
        name: s3-provider
    spec:
      containers:
      - name: s3fuse
        image: nuclearis/kube-s3fs
        securityContext:
          privileged: true
        # use ALL  entries in the config map as environment variables
        volumeMounts:
        - name: devfuse
          mountPath: /dev/fuse
        - name: mntdatas3fs
          mountPath: /var/s3:shared
      volumes:
      - name: devfuse
        hostPath:
          path: /dev/fuse
      - name: mntdatas3fs
        hostPath:
          path: /mnt/data-3fs
