gateways/realtimeUse/gateway1.yaml

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: woocommerce-integration-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - api-oe-biz-dev.xstak.com
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - api-oe-biz-dev.xstak.com
